<resources>
    <string name="app_name">DishRecipes</string>
    <string name="title_home">Главная</string>
    <string name="title_dashboard">Избранное</string>
    <string name="title_notifications">Случайное блюдо</string>
    <string name="splash_screen_title">Dish Recipes</string>

    <string name="add_dish">Добавить рецепт</string>


    <string name="image_contentDescription">изображение</string>
    <string name="lbl_title">Заголовок</string>
    <string name="lbl_type">Тип</string>
    <string name="lbl_category">Категория</string>
    <string name="lbl_ingredients">Ингридиенты</string>
    <string name="lbl_cooking_time_in_minutes">Время готовки в минутах</string>
    <string name="lbl_direction_to_cook">Инструкция по приготовлению</string>
    <string name="lbl_add_dish">ДОБАВИТЬ РЕЦЕПТ</string>

    <string name="title_select_image_action">Выберите действие с изображением</string>
    <string name="lbl_camera">Камера</string>
    <string name="lbl_gallery">Галерея</string>

    <string name="title_select_dish_type">Выберите тип блюда</string>
    <string name="title_select_dish_category">Выберите категорию блюда</string>
    <string name="title_select_dish_cooking_time">Выберите время готовки в минутах</string>

    <string name="err_msg_select_dish_image">Выберите фото блюда</string>
    <string name="err_msg_select_dish_title">Введите название блюда</string>
    <string name="err_msg_select_dish_type">Выберите тип блюда</string>
    <string name="err_msg_select_dish_category">Выберите категорию блюда</string>
    <string name="err_msg_select_dish_ingredients">Введите ингредиенты блюда</string>
    <string name="err_msg_select_dish_cooking_time">Выберите время готовки блюда</string>
    <string name="err_msg_select_dish_cooking_instructions">Введите инструкцию по приготовлению блюда</string>
    <string name="label_no_dishes_added_yet">Блюда ещё не добавлены</string>
    <string name="label_no_favorite_dishes_added_yet">Избранные блюда ещё не добавлены</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_dish_details">Детали блюда</string>
    <string name="lbl_estimate_cooking_time">Приблизительное время, необходимое для приготовления блюда, составляет %1$s минут.</string>
    <string name="action_edit_dish">Изменить блюдо</string>
    <string name="action_delete_dish">Удалить блюдо</string>

    <string name="title_add_dish">Добавить блюдо</string>
    <string name="title_edit_dish">Изменить блюдо</string>
    <string name="lbl_update_dish">Обновить блюдо</string>

    <string name="title_delete_dish">Удалить блюдо</string>
    <string name="lbl_yes">Да</string>
    <string name="lbl_no">Нет</string>
    <string name="msg_delete_dish_dialog">Вы уверены, что хотите удалить %1$s</string>

    <string name="action_filter_dishes">Фильтр блюд</string>
    <string name="title_select_item_to_filter">Выберите элемент фильтра</string>
    <string name="msg_added_to_favorites">Блюдо добавлено в избранное</string>

    <string name="msg_already_added_to_favorites">вы уже добавили блюдо в избранное</string>
    <string name="please_wait">Пожалуйста, подождите!</string>
    <string name="action_share_dish">Поделиться блюдом</string>

    <string name="notification_title">Проверьте новый рецепт блюда</string>
    <string name="notification_subtitle">Нажмите чтобы узнать больше подробностей</string>

</resources>