<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_all_dishes">

    <fragment
        android:id="@+id/navigation_all_dishes"
        android:name="com.example.dishrecipes.view.fragments.AllDishesFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_all_dishes" >
        <action
            android:id="@+id/action_all_dishes_to_dish_details"
            app:destination="@id/navigation_dish_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite_dish"
        android:name="com.example.dishrecipes.view.fragments.FavoriteDishesFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_favorite_dish">
        <action
            android:id="@+id/action_favorite_dishes_to_dish_details"
            app:destination="@id/navigation_dish_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_random_dish"
        android:name="com.example.dishrecipes.view.fragments.RandomDishFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_random_dish" />

    <fragment
        android:id="@+id/navigation_dish_details"
        android:name="com.example.dishrecipes.view.fragments.DishDetailsFragment"
        android:label="@string/title_dish_details"
        tools:layout="@layout/fragment_dish_details">
        <argument
            android:name="dishDetails"
            app:argType="com.example.dishrecipes.model.entities.FavDish"
            />
    </fragment>

</navigation>