<?xml version="1.0" encoding="UTF-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".view.activities.AddUpdateDishActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add_dish_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/add_dish"
        app:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="?attr/colorPrimary" />


    <ScrollView
        android:layout_height="0dp"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_add_dish_activity"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scrollbars="none"
        android:fillViewport="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintVertical_chainStyle="spread_inside">


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/fl_select_image">

                <ImageView
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:background="@color/dish_image_background"
                    android:id="@+id/iv_dish_image"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/image_contentDescription"/>

                <ImageView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/iv_add_dish_image"
                    android:contentDescription="@string/image_contentDescription"
                    android:src="@drawable/ic_add_a_photo"
                    android:padding="@dimen/_16sdp"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:layout_gravity="end|bottom"/>

            </FrameLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/til_title"
                app:layout_constraintTop_toBottomOf="@id/fl_select_image"
                app:hintTextColor="@color/blue_grey_700"
                android:hint="@string/lbl_title"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginStart="@dimen/_16sdp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/et_title"
                    android:textSize="15sp"
                    android:textColor="@color/grey_900"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/til_type"
                app:layout_constraintTop_toBottomOf="@id/til_title"
                app:hintTextColor="@color/blue_grey_700"
                android:hint="@string/lbl_type"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginStart="@dimen/_16sdp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/et_type"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/grey_900"
                    android:inputType="text"
                    android:focusable="false"
                    android:focusableInTouchMode="false"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/til_category"
                app:layout_constraintTop_toBottomOf="@id/til_type"
                app:hintTextColor="@color/blue_grey_700"
                android:hint="@string/lbl_category"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginStart="@dimen/_16sdp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/et_category"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/grey_900"
                    android:inputType="text"
                    android:focusable="false"
                    android:focusableInTouchMode="false"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/til_ingredients"
                app:layout_constraintTop_toBottomOf="@id/til_category"
                app:hintTextColor="@color/blue_grey_700"
                android:hint="@string/lbl_ingredients"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginStart="@dimen/_16sdp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/et_ingredients"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/grey_900"
                    android:inputType="textMultiLine"
                    android:minLines="5"
                    android:gravity="top"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/til_cooking_time"
                app:layout_constraintTop_toBottomOf="@id/til_ingredients"
                app:hintTextColor="@color/blue_grey_700"
                android:hint="@string/lbl_cooking_time_in_minutes"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginStart="@dimen/_16sdp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/et_cooking_time"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/grey_900"
                    android:inputType="text"
                    android:gravity="top"
                    android:focusable="false"
                    android:focusableInTouchMode="false"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/til_direction_to_cook"
                app:layout_constraintTop_toBottomOf="@id/til_cooking_time"
                app:hintTextColor="@color/blue_grey_700"
                android:hint="@string/lbl_direction_to_cook"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginStart="@dimen/_16sdp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/et_direction_to_cook"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/grey_900"
                    android:inputType="text"
                    android:gravity="top" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/btn_add_dish"
                app:layout_constraintTop_toBottomOf="@id/til_direction_to_cook"
                app:layout_constraintBottom_toBottomOf="parent"
                android:foreground="?attr/selectableItemBackground"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:gravity="center"
                android:text="@string/lbl_add_dish"
                android:layout_marginBottom="20dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>