<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_dish_detail_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.DishDetailsFragment"
    android:scrollbars="none"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/fl_dish_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_dish_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:scaleType="fitXY"
                android:contentDescription="@string/image_contentDescription"
                android:background="@color/dish_image_background"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/favorite_button_background"
                android:elevation="@dimen/_10sdp"
                android:layout_margin="@dimen/_10sdp" android:layout_gravity="top|end">

                <ImageView
                    android:id="@+id/iv_favorite_dish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image_contentDescription"
                    android:src="@drawable/ic_favorite_unselected"/>

            </LinearLayout>

        </FrameLayout>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/tv_title"
            android:layout_margin="@dimen/_10sdp"
            tools:text="Dish Title"
            android:textStyle="bold"
            android:textSize="@dimen/_20sdp"
            android:textColor="@color/blue_grey_900"
            android:layout_below="@id/fl_dish_image"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/tv_type"
            tools:text="Type"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/grey_900"
            android:layout_below="@id/tv_title"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/tv_category"
            tools:text="Category"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/grey_500"
            android:layout_below="@id/tv_type"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/tv_ingredients_label"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/lbl_ingredients"
            android:textStyle="bold"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/blue_grey_900"
            android:layout_below="@id/tv_category"/>


        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/tv_ingredients"
            tools:text="Ingredients Value"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/grey_900"
            android:layout_below="@id/tv_ingredients_label"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginStart="@dimen/_16sdp"/>


        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/tv_cooking_direction_label"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/lbl_direction_to_cook"
            android:textStyle="bold"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/blue_grey_900"
            android:layout_below="@id/tv_ingredients"/>


        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/tv_cooking_direction"
            tools:text="Ingredients Value"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/grey_900"
            android:layout_below="@id/tv_cooking_direction_label"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginStart="@dimen/_16sdp"/>


        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/tv_cooking_time"
            android:layout_margin="@dimen/_16sdp"
            tools:text="@string/lbl_estimate_cooking_time"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/grey_500"
            android:layout_below="@id/tv_cooking_direction"
            android:gravity="center"/>

    </RelativeLayout>

</ScrollView>